--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -3,6 +3,7 @@
 .me-page {
   color: $font-primary-color;
 
+
   &__section {
     padding: 35px 0;
     background: $background-z1-color;
@@ -52,8 +53,18 @@
   &--events-section {
     max-width: 700px;
     margin: auto;
+    transition: opacity 0.6s ease, transform 0.6s ease;
     @include mdc-layout-grid-media-query_("phone") {
       padding: 24px;
+    }
+
+    &.is-animated {
+      opacity: 0;
+      transform: translate(0, 100px);
+      will-change: opacity, transform;
+      @include mdc-layout-grid-media-query_("phone") {
+        transform: translate(100vw, 0);
+      }
     }
   }
 
