--- a/web/app/assets/stylesheets/components/me-swipable.scss
+++ b/web/app/assets/stylesheets/components/me-swipable.scss
@@ -11,8 +11,8 @@
   }
 
   &__item {
-    width: 100%;
-    height: 100%;
+    width: -webkit-fill-available;
+    height: -webkit-fill-available;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -21,9 +21,9 @@
     display: flex;
     flex-wrap: wrap;
     align-content: flex-end;
-    padding: 15px 30px 15px 15px;
+    // padding: 15px 30px 15px 15px;
     @include mdc-layout-grid-media-query_("phone") {
-      padding: 15px;
+      // padding: 15px;
     }
 
     &-title, &-description {
@@ -33,7 +33,7 @@
     &-title {
       font-size: 22px;
       font-weight: 700;
-      padding-bottom: 6px;
+      padding: 0 15px;
       font-family: $font-primary-family;
       @include mdc-layout-grid-media-query_("phone") {
         font-size: 22px;
@@ -44,6 +44,7 @@
       font-size: 14px;
       line-height: 1.3em;
       font-weight: 400;
+      padding: 0 15px 15px;
       @include mdc-layout-grid-media-query_("phone") {
         font-size: 12px;
       }
