--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -2,6 +2,7 @@
 
 .me-page {
   color: $font-primary-color;
+  @include is-slide-left-animated;
 
 
   &__section {
@@ -53,18 +54,9 @@
   &--events-section {
     max-width: 700px;
     margin: auto;
-    transition: opacity 0.6s ease, transform 0.6s ease;
+    @include is-slide-right-animated;
     @include mdc-layout-grid-media-query_("phone") {
       padding: 24px;
-    }
-
-    &.is-animated {
-      opacity: 0;
-      transform: translate(0, 100px);
-      will-change: opacity, transform;
-      @include mdc-layout-grid-media-query_("phone") {
-        transform: translate(100vw, 0);
-      }
     }
   }
 
