--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -43,7 +43,7 @@
       <% end %>
     </div>
 
-    <h3 class="mdc-typography--headline6">
+    <h3 class="me-similar__topics">
       Tópicos parecidos com os do <%= link_to(limit_name_size(event.details['name'], 60), event_path(event)) %>
     </h3>
 
