--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -27,7 +27,7 @@ phone: 8
       max-width: unset;
       padding: 0;
       padding: 35px 0 35px 0;
-      border-bottom: 1px solid $border-color;
+      //border-bottom: 1px solid $border-color;
     }
     //
     // &:last-child {
