--- a/web/app/assets/stylesheets/_template.scss
+++ b/web/app/assets/stylesheets/_template.scss
@@ -1,3 +1,11 @@
+.lazy-bgimage {
+  will-change: opacity;
+  transition: all 0.3s;
+}
+.lazy-bgimage.hidden {
+  opacity: 0;
+}
+
 .is-first-section {
   margin-top: 50px;
 }
