Fix artifact page

--- a/web/app/views/artifacts/index.html.erb
+++ b/web/app/views/artifacts/index.html.erb
@@ -8,20 +8,20 @@
       <th style="text-align: left">Nome</th>
       <th>Quando</th>
       <th>Download</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @artifacts.each do |artifact| %>
-      <tr>
-        <td><%= artifact.name %></td>
-        <td style="text-align: center"><%= time_ago_in_words artifact.created_at %></td>
-        <td style="text-align: center; text-decoration: underline"><a href="<%= Rails.application.routes.url_helpers.rails_blob_path(artifact.file, only_path: true) %>">Baixar arquivo</a></td>
-        <td><%= link_to 'Mostrar', artifact %></td>
-        <td><%= link_to 'Excluir', edit_artifact_path(artifact) %></td>
-        <td><%= link_to 'Destruir', artifact, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <% if artifact.file.attached? %>
+        <tr>
+          <td><%= artifact.details['name'] %></td>
+          <td style="text-align: center"><%= time_ago_in_words artifact.created_at %></td>
+          <td style="text-align: center; text-decoration: underline"><a href="<%= Rails.application.routes.url_helpers.rails_blob_path(artifact.file, only_path: true, disposition: "attachment") %>">Baixar arquivo</a></td>
+          <td><%= link_to 'Destruir', artifact, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
+        </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
