--- a/web/app/views/artifacts/show.html.erb
+++ b/web/app/views/artifacts/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @artifact.name %>
+  <%= @artifact.details['name'] %>
 </p>
 
 <%= link_to 'Edit', edit_artifact_path(@artifact) %> |
