--- a/web/app/assets/stylesheets/components/me-chip-set.scss
+++ b/web/app/assets/stylesheets/components/me-chip-set.scss
@@ -1,7 +1,7 @@
 @import "../_variables";
 
 .me-chip-set {
-  text-align: right;
+  text-align: left;
   @include mdc-layout-grid-media-query_("phone") {
     text-align: left;
     width: max-content;
