--- a/web/app/assets/stylesheets/components/me-filter.scss
+++ b/web/app/assets/stylesheets/components/me-filter.scss
@@ -38,9 +38,19 @@
     }
 
     & .mdc-chip {
-      margin: 2px;
+      @include mdc-layout-grid-media-query_("desktop") {
+        font-weight: 400;
+        font-size: 9px;
+        height: auto;
+        line-height: 1em;
+        padding: 6px 8px;
+        margin: 2px 0px;
+      }
+
       @include mdc-layout-grid-media-query_("phone") {
-        // margin: 4px;
+        font-size: 11px;
+        height: 34px;
+        margin: 2px;
       }
     }
   }
