--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -33,10 +33,10 @@
 
   &--feed-section {
     //max-width: 85%;
-    //margin: 0 0 0 10%;
     // padding-top: 35px;
 
     @include mdc-layout-grid-media-query_("phone") {
+      margin: 25px 0 0 0;
       // padding-top: 45px;
     }
   }
