--- a/web/app/assets/stylesheets/components/me-similar.scss
+++ b/web/app/assets/stylesheets/components/me-similar.scss
@@ -15,7 +15,7 @@
   @include mdc-layout-grid-media-query_("phone") {
     width: auto;
     padding: 6px 0;
-    margin: 0 12px 12px 12px;
+    margin: 0 12px 35px 12px;
   }
 
 
@@ -154,8 +154,8 @@
       }
     }
 
-    &__like-button {
-
+    &__overlay {
+      box-shadow: 0 0 3px #00000038;
     }
 
     & .mdc-card__media {
