--- a/web/app/views/components/collection/_collection.html.erb
+++ b/web/app/views/components/collection/_collection.html.erb
@@ -11,115 +11,115 @@
 %>
 
 
-<% unless items[:events].empty? %>
-  <%# cache [current_user, identifier, cache_keys[:categories], cache_keys[:kinds], cache_keys[:ocurrences]] do %>
+<%# unless items[:events].empty? %>
+<%# cache [current_user, identifier, cache_keys[:categories], cache_keys[:kinds], cache_keys[:ocurrences]] do %>
 
-    <div class="me-feed__section"
-         data-controller="section"
-         data-target="section.section"
-         data-section-items-count="<%= events_in_collection %>"
-         data-observable="float-menu.section"
-         id="<%= identifier %>">
-      <div class="me-feed__section-head">
-        <h2 class="mdc-typography--<%= type == :large ? 'headline4' : 'headline5' %>">
-          <%= title[:principal] %>
-          <span>
+<div class="me-feed__section"
+     data-controller="section"
+     data-target="section.section"
+     data-section-items-count="<%= events_in_collection %>"
+     data-observable="float-menu.section"
+     id="<%= identifier %>">
+  <div class="me-feed__section-head">
+    <h2 class="mdc-typography--<%= type == :large ? 'headline4' : 'headline5' %>">
+      <%= title[:principal] %>
+      <span>
             <%= title[:secondary] %>
           </span>
-        </h2>
-        <% if filters %>
-          <div class="me-filter"
-               data-controller="filter"
-               data-filter-section-identifier="<%= identifier %>"
-               data-filter-title="<%= title.to_json %>"
-               data-filter-init-filters-applyed="<%= filters_applyed.to_json %>"
-               data-target="filter.filterContainer section.filter">
-            <% if filters[:categories] && items[:filters] %>
-              <%= title[:categories] %>
-              <%= render partial: 'feeds/filter', locals: {
-                  initial_filters:              items[:categories],
-                  params_filters:               params[:categories],
-                  filters_that_exist_in_events: items[:categories],
-                  icon_type:                    'filter_list',
-                  type:                         'categories'
-              } %>
-            <% end %>
-            <% if filters[:kinds] && params[:categories] && params[:kinds] && items[:kinds] %>
-              <%= title[:kinds] %>
-              <%= render partial: 'feeds/filter', locals: {
-                  initial_filters:              items[:kinds],
-                  params_filters:               params[:kinds],
-                  filters_that_exist_in_events: items[:kinds],
-                  icon_type:                    'filter_list',
-                  type:                         'kinds'
-              } %>
-            <% end %>
-            <% if filters[:ocurrences] && items[:ocurrences] %>
-              <%= title[:ocurrences] %>
-              <%= render partial: 'feeds/filter', locals: {
-                  initial_filters:              items[:ocurrences],
-                  params_filters:               params[:ocurrences],
-                  filters_that_exist_in_events: items[:ocurrences],
-                  icon_type:                    '',
-                  type:                         'ocurrences'
-              } %>
-            <% end %>
-          </div>
+    </h2>
+    <% if filters %>
+      <div class="me-filter"
+           data-controller="filter"
+           data-filter-section-identifier="<%= identifier %>"
+           data-filter-title="<%= title.to_json %>"
+           data-filter-init-filters-applyed="<%= filters_applyed.to_json %>"
+           data-target="filter.filterContainer section.filter">
+        <% if filters[:categories] && items[:filters] %>
+          <%= title[:categories] %>
+          <%= render partial: 'feeds/filter', locals: {
+              initial_filters:              items[:categories],
+              params_filters:               params[:categories],
+              filters_that_exist_in_events: items[:categories],
+              icon_type:                    'filter_list',
+              type:                         'categories'
+          } %>
+        <% end %>
+        <% if filters[:kinds] && params[:categories] && params[:kinds] && items[:kinds] %>
+          <%= title[:kinds] %>
+          <%= render partial: 'feeds/filter', locals: {
+              initial_filters:              items[:kinds],
+              params_filters:               params[:kinds],
+              filters_that_exist_in_events: items[:kinds],
+              icon_type:                    'filter_list',
+              type:                         'kinds'
+          } %>
+        <% end %>
+        <% if filters[:ocurrences] && items[:ocurrences] %>
+          <%= title[:ocurrences] %>
+          <%= render partial: 'feeds/filter', locals: {
+              initial_filters:              items[:ocurrences],
+              params_filters:               params[:ocurrences],
+              filters_that_exist_in_events: items[:ocurrences],
+              icon_type:                    '',
+              type:                         'ocurrences'
+          } %>
         <% end %>
       </div>
-      <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-          <% unless items.empty? %>
-            <%= render partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
-                identifier: identifier
-            } %>
+    <% end %>
+  </div>
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+      <% unless items.empty? %>
+        <%= render partial: 'components/collection/event', collection: items[:events], as: :event, locals: {
+            identifier: identifier
+        } %>
 
-            <%= render partial: 'components/collection/similar', locals: {
-                events:     items[:events],
-                identifier: identifier
-            } unless mobile_device? %>
-
-            <%# if events_in_collection < 4 %>
-              <!-- <div class="me-feed__empty">
-                <i class="material-icons-sharp sentiment-satisfied">
-                  sentiment_satisfied
-                </i>
-                <span>Estes são todos os eventos disponíveis para esta coleção. Experimente explorar mais ou diminuir os filtros.</span>
-              </div> -->
-            <%# end %>
-
-          <% end %>
-        </div>
         <%= render partial: 'components/collection/similar', locals: {
             events:     items[:events],
             identifier: identifier
-        } if mobile_device? %>
-        <% if events_in_collection >= 4 %>
-          <div class="me-feed__load-more"
-               data-action="click->section#loadMore"
-               data-target="section.loadMoreButton">
-            <button class="mdc-button">
-              <span class="mdc-button__label">mostrar mais</span>
-            </button>
-          </div>
-        <% end %>
-        <%# if items.empty? %>
-          <!-- <div class="me-card me-card--notice mdc-card mdc-card--outlined">
-            <div class="me-card__primary-section">
-              <i class="material-icons">
-                info
-              </i>
-              Nenhum evento com as características selecionadas
-            </div>
-            <div class="me-card__secondary-section">
-              Tente remover alguns filtros, usar filtros diferentes ou volte para a listagem completa sem filtros.
-            </div>
-            <div class="me-card__primary-action">
-              Voltar para listagem completa
-            </div>
-          </div> -->
+        } unless mobile_device? %>
+
+        <%# if events_in_collection < 4 %>
+        <!-- <div class="me-feed__empty">
+          <i class="material-icons-sharp sentiment-satisfied">
+            sentiment_satisfied
+          </i>
+          <span>Estes são todos os eventos disponíveis para esta coleção. Experimente explorar mais ou diminuir os filtros.</span>
+        </div> -->
         <%# end %>
-      </div>
+
+      <% end %>
     </div>
-  <%# end %>
-<% end %>
+    <%= render partial: 'components/collection/similar', locals: {
+        events:     items[:events],
+        identifier: identifier
+    } if mobile_device? %>
+    <% if events_in_collection >= 4 %>
+      <div class="me-feed__load-more"
+           data-action="click->section#loadMore"
+           data-target="section.loadMoreButton">
+        <button class="mdc-button">
+          <span class="mdc-button__label">mostrar mais</span>
+        </button>
+      </div>
+    <% end %>
+    <% if items[:events].empty? %>
+      <div class="me-card me-card--notice mdc-card mdc-card--outlined">
+        <div class="me-card__primary-section">
+          <i class="material-icons">
+            info
+          </i>
+          Nenhum evento com as características selecionadas
+        </div>
+        <div class="me-card__secondary-section">
+          Tente remover alguns filtros ou volte para a listagem completa sem filtros.
+        </div>
+<!--        <div class="me-card__primary-action">-->
+<!--          Voltar para listagem completa-->
+<!--        </div>-->
+      </div>
+    <% end %>
+  </div>
+</div>
+<%# end %>
+<%# end %>
