--- a/web/app/views/layouts/_app-top-bar.html.erb
+++ b/web/app/views/layouts/_app-top-bar.html.erb
@@ -5,9 +5,9 @@
       <section class="me-top-app-bar__section me-top-app-bar__section--left mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
         <a href="/">
           <% if mobile_device? %>
-            <%= responsive_image_tag 'logo-mobile', class: 'me-top-app-bar__logo-text', alt: 'logo' %>
+            <%= responsive_image_tag 'logo-mobile', class: 'me-top-app-bar__logo', alt: 'logo' %>
           <% else %>
-            <%= responsive_image_tag 'logo', class: 'me-top-app-bar__logo-text', alt: 'logo' %>
+            <%= responsive_image_tag 'logo', class: 'me-top-app-bar__logo', alt: 'logo' %>
           <% end %>
         </a>
       </section>
