--- a/web/app/assets/stylesheets/components/me-icon.scss
+++ b/web/app/assets/stylesheets/components/me-icon.scss
@@ -17,7 +17,7 @@
 
   &:hover {
     & .iron-icon {
-      fill: $brand-color-left;
+      fill: $brand-color;
     }
     //background: $background-color;
   }
