--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import 'variables';
 
 $mdc-typography-font-family: $font-secondary-family;
-$mdc-theme-primary: $brand-color-left;
+$mdc-theme-primary: $brand-color;
 //$mdc-theme-secondary: #feeae6;
 //$mdc-theme-on-primary: #442b2d;
 //$mdc-theme-on-secondary: #442b2d;
@@ -121,7 +121,7 @@ a {
 
 .turbolinks-progress-bar {
   height: 5px;
-  background-color: $brand-color-left;
+  background-color: $brand-color;
 }
 
 
