--- a/web/app/assets/stylesheets/components/me-float-menu.scss
+++ b/web/app/assets/stylesheets/components/me-float-menu.scss
@@ -51,7 +51,7 @@
     transition: opacity 0.2s ease-in;
 
     &.is-active {
-      color: $brand-color-left;
+      color: $brand-color;
     }
   }
 
