--- a/web/app/assets/stylesheets/welcome/application.scss
+++ b/web/app/assets/stylesheets/welcome/application.scss
@@ -157,7 +157,7 @@
     align-items: center;
     text-align: center;
     text-transform: uppercase;
-    color: $brand-color-left;
+    color: $brand-color;
     justify-content: center;
     box-shadow: 0 0 45px rgba(0, 0, 0, 0.25);
     border-radius: 60px;
@@ -321,7 +321,7 @@
     font-weight: bold;
     font-size: 18px;
     line-height: 22px;
-    color: $brand-color-left;
+    color: $brand-color;
     cursor: pointer;
     width: 100%;
     height: 100%;
@@ -333,7 +333,7 @@
 
     &:hover {
       //transform: scale(0.9);
-      background: $brand-color-left;
+      background: $brand-color;
       & h3 {
         color: #ffffff;
       }
