--- a/web/app/views/feeds/_saves.html.erb
+++ b/web/app/views/feeds/_saves.html.erb
@@ -53,7 +53,7 @@
                     <div class="me-card__overlay"
                          data-target="saves-events.overlay"></div>
                   </div>
-                  <div class="me-card__date" data-target="saves-events.date">
+                  <div class="me-card__date <%= 'is-today' if ['hoje', 'amanhã'].include?(event.day_of_week['decorator'])  %>" data-target="saves-events.date">
                     <%= event.day_of_week['decorator'] %>
                   </div>
   <!--                <div class="me-card__title mdc-card__title"-->
